# darnax

./: .gitignore  pyproject.toml
docs/tutorials/: 09_sota_on_mnist.py  10_sota_on_mnist_unified_lr.md  10_sota_on_mnist_unified_lr.py
src/darnax/datasets/classification/: cifar10.py  cifar10_features.py  fashion_mnist.py  interface.py  mnist.py  tinyimagenet_features.py
src/darnax/layer_maps/: sparse.py
src/darnax/modules/: fully_connected.py  recurrent.py  recurrent_tanh.py
src/darnax/modules/conv/: conv.py  pooling.py  utils.py
src/darnax/orchestrators/: sequential.py
src/darnax/trainers/: dynamical.py
tests/datasets/: test_cifar10.py  test_dataset_shuffling.py  test_fashion_mnist.py  test_mnist.py  test_tinyimagenet_features.py
tests/modules/: test_conv_modules.py  test_conv_modules_equinox.py  test_conv_pooling.py  test_conv_utils.py
tests/utils/: test_cont_perceptron_rule.py
