[project]
name = "darnax"
version = "0.4.0"
description = "Deep Asymmetric Recurrent Network in Equinox/JAX"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPLv3" }
authors = [{ name="Davide Badalotti", email="davide.badalotti@outlook.it"}]

dependencies = [
  "equinox>=0.11.12,<0.13", # requires jax >= 0.4.38
  "numpy>=1.26",
  "optax>=0.2.3,<0.3",
  "datasets>=4.1.1",
  "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff>=0.5",
    "black>=25.0.0",
    "mypy>=1.10",
    "types-setuptools",
    "pytest-benchmark",
    "nbmake",
    "pre-commit",
    "pip-audit",
]
docs = ["mkdocs","mkdocs-material","mkdocstrings[python]","mkdocs-autorefs",
        "mkdocs-section-index","mkdocs-literate-nav","jupytext","mkdocs-gen-files"]

[project.optional-dependencies]
jax-cpu = [
  "jax==0.4.38",
  "jaxlib==0.4.38",
]
jax-cuda12 = [
  "jax[cuda12]==0.4.38",
  "jaxlib==0.4.38",
]
jax-metal = [
  "jax==0.4.38",
  "jaxlib==0.4.38",
  "jax-metal==0.1.0; platform_system=='Darwin' and platform_machine=='arm64'",
]
add-ons = [
  "tqdm>=4.0",
  "pillow>=11.3.0",
  "matplotlib>=3.10.6"
]

[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B","D","N","ARG","SIM","PL","TCH"]
ignore = ["D100","D104","D213","D203","E501","N806","ARG002","E203", "PLR2004"]

[tool.ruff.lint.pylint]
max-args = 11

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []
exclude = ["bench/","tests/","docs/"]

[[tool.mypy.overrides]]
module = "optax.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
